tests/sintax-semanth/should_pass/test8Ok.tds
{
    This test 
    should
    pass
}
program
begin

    integer a,b,c;

    integer functionX()
    begin
        a = 5;
        b = 7;
        c = 10;
        return a+b+c;
    end

    // main function
    void main()
    begin
        integer y;
        y = -4 - 5;
        if (y == 1) then
            begin
                return 1;
            end
        else
            begin
                return functionX();
            end
    end
    { 
        multi
        line
        comment
    }
end