tests/sintax-semanth/should_fail/test5Wrong.tds
//This test should fail because a return statement is missing in bool function
program
begin
	bool fun(integer w)
		begin
			integer ab;
			integer bc;

			ab = 5;
			bc = 10;
		end

	void main()
		begin
			integer h;
			bool w;
			h = 10;
			w = true;
		end
end